@@ -80,6 +80,31 @@
     // Defaults to 10 (minutes).
     WOWatchDogRequestTimeout = 60;
 
+    // Overwrite the maximum number of items returned during a Sync operation.
+    // Defaults to 0, which means no overwrite is performed.
+    // Setting this parameter to a value greater than 512 will have unexpected
+    // behaviour with various ActiveSync clients.
+    SOGoMaximumSyncWindowSize = 100;
+
+    // Overwrite the maximum response size during a Sync operation.
+    // The value is in kilobytes. Setting this to 512 means the response size
+    // will be of 524288 bytes or less (or a bit greater if needed for syncing
+    // one item). Note that if you set the value too low and a mail message
+    // (or any other object like calendar events, tasks and contacts) surpasses
+    // it, it will still be synced but only this item will be.
+    // Defaults to 0, which means no overwrite is performed.
+    //
+    // Say you have these five mails and you set the limit to 512KB:
+    //  1.  250 KB
+    //  2.  250 KB
+    //  3.   25 KB
+    //  4.  750 KB
+    //  5.   10 KB
+    // Sync iteration no. 1 will pick message 1, 2 and 3.
+    // Sync iteration no. 2 will pick message 4.
+    // Sync iteration no. 3 will pick message 5.
+    SOGoMaximumSyncResponseSize = 2048;
+
     // The maximum amount of memory (in megabytes) that a child can use.
     // Reaching that value will force children processes to restart, in order
     // to preserve system memory.
